add inline query call

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+    <ul>
+      <li>
+        <p id="call-inline-query" class="action">
+          Call <code>web_app_switch_inline_query</code>
+        </p>
+      </li>
+    </ul>
+    <script src="index.js"></script>
   </body>
 </html>
