--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <ul>
-      <li>
-        <p id="call-inline-query" class="action">
-          Call <code>web_app_switch_inline_query</code>
-        </p>
-      </li>
-    </ul>
+    <p id="call-inline-query" class="action">
+      Call <b>web_app_switch_inline_query</b>
+    </p>
     <script src="index.js"></script>
   </body>
 </html>
