Add secure storage test

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
     <p id="call-inline-query" class="action">
       Call <b>web_app_switch_inline_query</b>
     </p>
+    <p id="call-show-storage" class="action">
+      Call <b>web_app_secure_storage_get_key</b> with key <b>TEST</b>
+    </p>
+    <iframe src="https://webappcontent.telegram.org/demo?mode=menu#tgWebAppVersion=10">
+    </iframe>
     <script src="index.js"></script>
   </body>
 </html>
