--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       Call <b>web_app_switch_inline_query</b>
     </p>
     <p id="call-show-storage" class="action">
-      Call <b>web_app_secure_storage_get_key</b> with key <b>TEST</b>
+      Call <b>web_app_secure_storage_get_key</b> with key <b>test</b>
     </p>
     <iframe src="https://webappcontent.telegram.org/demo?mode=menu#tgWebAppVersion=10">
     </iframe>
