--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <p id="call-inline-query" class="action">
       Call <b>web_app_switch_inline_query</b>
     </p>
-    <p id="call-show-storage" class="action">
-      Call <b>web_app_secure_storage_get_key</b> with key <b>test</b>
+    <p id="call-secure-storage-set" class="action">
+      Call <b>web_app_secure_storage_save_key</b> with key <b>AAA</b> and value <b>BBB</b>
     </p>
     <iframe src="https://webappcontent.telegram.org/demo?mode=menu#tgWebAppVersion=10">
     </iframe>
