--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p id="call-secure-storage-set" class="action">
       Call <b>web_app_secure_storage_save_key</b> with key <b>AAA</b> and value <b>BBB</b>
     </p>
+    <input id="multiple-files-input" type="file" multiple accept="image/*"/>
     <iframe src="https://webappcontent.telegram.org/demo?mode=menu#tgWebAppVersion=10">
     </iframe>
     <script src="index.js"></script>
