--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       Call <b>web_app_secure_storage_save_key</b> with key <b>AAA</b> and value <b>BBB</b>
     </p>
     <div class="input-container">
-      Multiple files selector: <input id="multiple-files-input" type="file" multiple accept="image/*"/>
+      <input id="multiple-files-input" type="file" multiple accept="image/*"/>
     </div>
     <iframe src="https://webappcontent.telegram.org/demo?mode=menu#tgWebAppVersion=10">
     </iframe>
